--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  width: 100%;
+  min-height: 100vh;
+  min-height: 100dvh;
+}
+
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: inherit;
+}
+
+ul {
+  list-style-type: none;
+}
