--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,24 @@
-<p>sidebar works!</p>
+
+<div class="sidebar-desk-container">
+  <nav   class="menu-container">
+    <ul>
+      <li>
+        <a href="#" class="nav-item-desk scale-up-center active-item">INICIO</a>
+      </li>
+      <li>
+        <a href="#" class="nav-item-desk">ACERCA DE MI</a>
+      </li>
+      <li>
+        <a href="#" class="nav-item-desk">PORTAFOLIO</a>
+      </li>
+      <li>
+        <a href="#" class="nav-item-desk">CONTACTO</a>
+      </li>
+    </ul>
+  </nav>
+
+
+  <footer class="footer-desk-container">
+    <p>&copy; Copyright | 2023</p>
+  </footer>
+</div>
