--- a/src/app/portfolio/home/home.component.html
+++ b/src/app/portfolio/home/home.component.html
@@ -19,10 +19,10 @@
   </div>
 
   <div class="home-content">
-    <h1 class="title">Alondra Castro</h1>
+    <h1 class="title-home">Awesome Cat</h1>
 
     <div class="paragraph-container">
-      <p class="paragraph">CONTACTO</p>
+      <p class="paragraph-home">This section contains a short description about the skills of the owner of this portfolio. This is just a demo section you can include the information that fits best for your project.</p>
     </div>
 
     <button class="neutral-btn home-btn">
