--- a/src/app/portfolio/home/home.component.scss
+++ b/src/app/portfolio/home/home.component.scss
@@ -1,14 +1,135 @@
-
 @use "./src/scss/components/_neutral-button.scss" as *;
+@use "./src/scss/theme/dark-theme.scss" as *;
+
 
 .home-container {
-  padding: 0 1.6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  min-height: calc(100vh - $phantom-container-size-mob);
+  padding: 0 4rem;
   padding-bottom: 1em;
 }
+.home-content {}
 
 .bubble-image {
-  width: 20rem;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 98%;
+  max-width: 19rem;
   padding: 0;
-  background-color: mediumpurple;
 }
+
+.title-home {
+  color: $font-primary-clr;
+  font-family: $font-primary;
+  //font-size: 3rem;
+  font-size: clamp(1rem, 10vw + 1rem, 3rem);
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+.paragraph-container {
+  width: 100%;
+  max-width: 28rem;
+  margin: 0 auto;
+  margin-bottom: 1.6rem;
+}
+
+.paragraph-home {
+  color: $font-primary-clr;
+  font-family: $font-secondary;
+  font-size: 1.1rem;
+  text-align: center;
+  font-weight: 300;
+  line-height: 1.3em;
+}
+
+.home-btn {
+  display: block;
+  margin: 0 auto;
+}
+
+
+
+/*-----------------------------------------------------------.
+|                       - RESPONSIVE -                       |
+'-----------------------------------------------------------*/
+
+// » Tablet (Small)
+@media only screen and (min-width: 500px) { }
+
+// » Tablet (Large)
+@media only screen and (min-width: 600px) { }
+
+// » Laptop [-Small-]
+@media only screen and (min-width: 1024px) {
+  .home-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    min-height: calc(100vh - $phantom-container-size-desk);
+    padding: 0 9%;
+  }
+  .title-home {
+    font-size: 3rem;
+    text-align: start;
+  }
+  .paragraph-home {
+    font-size: clamp(1rem, 1.9vw + .4rem, 1.2rem);
+    text-align: start;
+  }
+  .home-btn {
+    display: inline;
+  }
+
+  .bubble-image {
+    max-width: 18rem;
+  }
+  .home-content {
+    width: 100%;
+    max-width: 25rem;
+  }
+}
+
+// » Laptop (13" Approx)
+@media only screen and (min-width: 1220px) {
+  .home-container {
+    padding: 0 13%;
+  }
+}
+
+// » Laptop (15" Approx)
+@media only screen and (min-width: 1440px) {
+  .home-container {
+    padding: 0 16%;
+  }
+  .home-content {
+    max-width: 26rem;
+  }
+}
+
+// » Laptop (16" Approx)
+@media only screen and (min-width: 1650px) {
+  .home-container {
+    padding: 0 18%;
+  }
+}
+
+// » Desktop (Medium)
+@media only screen and (min-width: 1900px) {
+  .home-container {
+    padding: 0 16%;
+  }
+  .bubble-image {
+    max-width: 22rem;
+  }
+}
+
+// » Desktop (Large)
+@media only screen and (min-width: 2500px) { }
