--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,5 +1,5 @@
-
 @use "./src/scss/theme/dark-theme.scss" as *;
+
 
 .sidebar-desk-container {
   position: relative;
@@ -9,10 +9,7 @@
   width: 28vw;
   min-height: 100vh;
   background-color: $bg-sidebar-clr;
-  //border: 1px solid aqua;
 }
-
-
 
 .nav-item-desk {
   display: block;
@@ -28,11 +25,10 @@
 }
 .nav-item-desk:hover {
   background-color: rgba(33, 70, 77, 0.31);
-
 }
 
 .active-item {
-  color: #ac9d77;
+  color: $menu-items-active-clr;
 }
 
 .footer-desk-container {
@@ -51,44 +47,50 @@
   }
 }
 
-@media screen and (min-width: 1128px) {
+
+/*-----------------------------------------------------------.
+|                       - RESPONSIVE -                       |
+'-----------------------------------------------------------*/
+
+// » Tablet | [!] This element doesn't exists on mobile view.
+@media only screen and (min-width: 500px) { }
+// » Tablet (Large) | [!] This element doesn't exists on tablet view.
+@media only screen and (min-width: 600px) { }
+
+
+// » Laptop [-Small-]
+@media only screen and (min-width: 1024px) {
   .sidebar-desk-container {
     width: 24vw;
-  }
-
-}
-
-@media screen and (min-width: 1280px) {
-  .sidebar-desk-container {
-    width: 20vw;
-  }
-
-  .nav-item-desk {
-    font-size: clamp(1.7rem, 2.1vw,3rem);
-    letter-spacing: 1px;
-  }
-}
-
-@media screen and (min-width: 1281px) {
-  .sidebar-desk-container {
-    width: 22vw;
-    //background-color: tomato;
-  }
-
-  .nav-item-desk {
-    font-size: clamp(1.7rem, 2.1vw,3rem);
-    letter-spacing: 1px;
-  }
-}
-
-@media screen and (min-width: 1500px) {
-  .sidebar-desk-container {
-    width: 17vw;
-    //background-color: tomato;
+    max-width: 18rem;
   }
   .nav-item-desk {
-    font-size: clamp(1.7rem, 1.8vw, 3rem);
-    letter-spacing: 1px;
+    font-size: clamp(1.7rem, 1.9vw + .6rem, 2.2rem);
   }
+}
+
+// » Laptop (13" Approx)
+@media only screen and (min-width: 1220px) {
 
 }
+
+// » Laptop (15" Approx)
+@media only screen and (min-width: 1440px) {
+  .nav-item-desk {
+    font-size: clamp(1.7rem, 2vw + .6rem, 2.2rem);
+  }
+}
+
+// » Laptop (16" Approx)
+@media only screen and (min-width: 1650px) { }
+
+// » Desktop (Medium)
+@media only screen and (min-width: 1900px) { }
+
+// » Desktop (Large)
+@media only screen and (min-width: 2500px) {
+  .sidebar-desk-container {
+    max-width: 17vw;
+  }
+}
+
