--- a/src/app/portfolio/home/home.component.html
+++ b/src/app/portfolio/home/home.component.html
@@ -1,5 +1,5 @@
 
-<div class="home-container">
+<div class="home-container animate__animated animate__fadeIn ">
 
   <div class="bubble-image">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="100%" id="blobSvg" filter="blur(0px)" style="opacity: 1;">
