--- a/src/scss/theme/dark-theme.scss
+++ b/src/scss/theme/dark-theme.scss
@@ -66,7 +66,10 @@ $btn-bg-primary-clr: #21464d;
 
 // » Accent buttons
 
-
+/*--------------------.
+|      - Cards -      |
+'--------------------*/
+$card-bg-clr: rgba(65, 64, 64, 0.13);
 
 /*-----------------------------------------------------------.
 |                       - RESPONSIVE -                       |
