--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @use "./src/scss/theme/dark-theme.scss" as *;
+@use "node_modules/animate.css/animate.min.css" as *;
 
 * {
   box-sizing: border-box;
@@ -26,6 +27,25 @@ a:visited {
 
 ul {
   list-style-type: none;
+}
+
+button {
+  // This is for improving the user experience of people using high-contrast mode
+  outline-color: transparent;
+}
+
+hr.style-one {
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #2f2e2e, #b3b3b3, #2f2e2e);
+}
+
+hr.style-two{
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 
